# Pico_Lcd_Clock

c/: CMakeLists.txt  main.c
c/Pico_Clock/: Makefile  Pico_Clock.c  Pico_Clock.h  clock_states.h  main.elf  main.hex  main.uf2
c/Pico_Clock/pico-sdk/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/docs/: cmake_install.cmake
c/Pico_Clock/pico-sdk/src/: cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/pico_sync/: cmake_install.cmake
c/Pico_Clock/pico-sdk/src/common/pico_time/: Makefile
c/Pico_Clock/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
c/Pico_Clock/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
c/Pico_Clock/pico-sdk/src/rp2040/hardware_regs/: Makefile
c/Pico_Clock/pico-sdk/src/rp2040/hardware_structs/: Makefile
c/Pico_Clock/pico-sdk/src/rp2_common/: Makefile
c/Pico_Clock/pico-sdk/tools/: cmake_install.cmake
c/examples/: CMakeLists.txt  LCD_2in_test.c  LCD_Test.h  Makefile  main.dis  main.elf.map
c/examples/pico-sdk/docs/: Makefile
c/examples/pico-sdk/src/: Makefile
c/examples/pico-sdk/src/common/: Makefile  cmake_install.cmake
c/examples/pico-sdk/src/rp2_common/: cmake_install.cmake
c/examples/pico-sdk/tools/: Makefile
(+113 files in other folders)
